[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
description = "Extends the std::fmt::*Hex traits to slices"
documentation = "https://cstorey.github.io/hex-slice/hex_slice/index.html"
license = "MIT"
name = "hex-slice"
repository = "https://github.com/cstorey/hex-slice/"
version = "0.1.0"

[dev-dependencies]
suppositions = "0.1.2"
