[package]
name = "hex-slice"
version = "0.1.1"
description = "Extends the std::fmt::*Hex traits to slices"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
repository = "https://github.com/cstorey/hex-slice/"
documentation = "https://cstorey.github.io/hex-slice/hex_slice/index.html"
license = "MIT"
readme = "README.md"

[dependencies]
