[package]
name = "hex-slice"
version = "0.1.2"
description = "Extends the std::fmt::*Hex traits to slices"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
documentation = "https://cstorey.github.io/hex-slice/hex_slice/index.html"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cstorey/hex-slice/"

[dev-dependencies]
suppositions = "0.1.2"
